// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert options keepUselessDefs: default 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width={0} height={0} style={{ position: 'absolute' }} {...props} />
)

export default SvgComponent
"
`;

exports[`convert options keepUselessDefs: keepUselessDefs: true 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width={0} height={0} style={{ position: 'absolute' }} {...props}>
    <symbol viewBox=\\"0 0 24 24\\">
      <path d=\\"M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z\\" />
      <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\" />
    </symbol>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert options svgAttribute 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg focusable=\\"false\\" {...props}>
    <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\" />
  </svg>
)

export default SvgComponent
"
`;

exports[`convert options titleProp 1`] = `
"import React from 'react'

const SvgComponent = ({ title, ...props }) => (
  <svg width={0} height={0} style={{ position: 'absolute' }} {...props}>
    <title>{title}</title>
    <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\" />
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should accept initial state (for webpack) 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg height={25} width={23} {...props}>
    <path d=\\"M9.9 1.1L3.3 21.78l16.5-13.2H0l16.5 13.2z\\" />
  </svg>
)

export default 'path/to/svg.svg'
export { SvgComponent as ReactComponent }
"
`;

exports[`convert should convert style attribute 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg
    xmlnsXlink=\\"http://www.w3.org/1999/xlink\\"
    width={48}
    height={48}
    {...props}
  >
    <g transform=\\"translate(0 -1004.362)\\">
      <g id=\\"a\\" color=\\"#000\\" fill=\\"#a3a3a3\\" strokeWidth={8}>
        <rect
          style={{ marker: 'none' }}
          width={4}
          height={4}
          x={4}
          y={1010.362}
          rx={0.2}
          ry={0.2}
          overflow=\\"visible\\"
        />
        <rect
          ry={0.2}
          rx={0.2}
          y={1010.362}
          x={12}
          height={4}
          width={32}
          style={{ marker: 'none' }}
          overflow=\\"visible\\"
        />
      </g>
      <use xlinkHref=\\"#a\\" />
      <use xlinkHref=\\"#a\\" transform=\\"translate(0 8)\\" />
      <use xlinkHref=\\"#a\\" transform=\\"translate(0 16)\\" />
      <use xlinkHref=\\"#a\\" transform=\\"translate(0 24)\\" />
      <use xlinkHref=\\"#a\\" transform=\\"translate(0 32)\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should convert using config 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width={88} height={88} viewBox=\\"0 0 88 88\\" {...props}>
    <title>Dismiss</title>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37L37 51M51 51L37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should remove style tags 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width={88} height={88} viewBox=\\"0 0 88 88\\" {...props}>
    <title>Dismiss</title>
    <g fill=\\"red\\" fillRule=\\"evenodd\\" strokeLinecap=\\"square\\">
      <g id=\\"Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
        <path d=\\"M51 37L37 51\\" id=\\"Shape\\" />
        <path d=\\"M51 51L37 37\\" />
      </g>
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should support react-native 1`] = `
"import React from 'react'

const SvgComponent = props => (
  <svg width={88} height={88} viewBox=\\"0 0 88 88\\" {...props}>
    <title>Dismiss</title>
    <g fill=\\"red\\" fillRule=\\"evenodd\\" strokeLinecap=\\"square\\">
      <g id=\\"Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
        <path d=\\"M51 37L37 51\\" id=\\"Shape\\" />
        <path d=\\"M51 51L37 37\\" />
      </g>
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`rawConvert should convert using specific options 1`] = `
"import React from 'react'

const MyComponent = (props) => {/*?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?*/}
<svg width=\\"88px\\" height=\\"88px\\" viewBox=\\"0 0 88 88\\" version={1.1} xmlnsXlink=\\"http://www.w3.org/1999/xlink\\" {...props}>
  {/*Generator: Sketch 46.2 (44496) - http://www.bohemiancoding.com/sketch*/}
  <title>
    Dismiss
  </title>
  <desc>
    Created with Sketch.
  </desc>
  <defs />
  <g id=\\"Blocks\\" stroke=\\"none\\" strokeWidth={1} fill=\\"none\\" fillRule=\\"evenodd\\" strokeLinecap=\\"square\\">
    <g id=\\"Dismiss\\" stroke=\\"currentColor\\" strokeWidth={2}>
      <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
      <path d=\\"M51,51 L37,37\\" id=\\"Shape\\" />
    </g>
  </g>
</svg>


export default MyComponent"
`;

exports[`should handle componentName with only numbers 1`] = `
"import React from 'react'

const Svg1BigSvg = (props) => <svg />


export default Svg1BigSvg"
`;
